# vivido

./: Cargo.toml  INSTALL.md  Makefile  README.md  build.rs
docs/: configuration.md  features.md  ipc.md  vivido.toml
extra/: vivido.info
extra/completions/: _vivido  vivido.bash  vivido.fish
extra/linux/: Vivido.desktop  org.vivido.Vivido.appdata.xml
extra/man/: vivido-bindings.5.scd  vivido-escapes.7.scd  vivido-msg.1.scd  vivido.1.scd  vivido.5.scd
extra/osx/Vivido.app/Contents/: Info.plist
scripts/: README.md  colors.sh  create-flamegraph.sh
src/: automation.rs  cli.rs  clipboard.rs  event.rs  logging.rs  main.rs  message_bar.rs  panic.rs  scheduler.rs  screenshot.rs  serde_replace.rs  window_context.rs
src/config/: bell.rs  bindings.rs  cursor.rs  font.rs  mod.rs  monitor.rs  selection.rs  terminal.rs  ui_config.rs
src/config_derive/: lib.rs  serde_replace.rs
src/config_derive/config_deserialize/: de_struct.rs
src/display/: color.rs  content.rs  cursor.rs  damage.rs  hint.rs  media.rs  meter.rs  mod.rs  rects.rs  renderer.rs  text.rs  window.rs
src/input/: keyboard.rs  mod.rs
src/polling/: ipc.rs  mod.rs
src/terminal/: event.rs  event_loop.rs  index.rs  mod.rs  ref_tests.rs  selection.rs
src/terminal/grid/: mod.rs  resize.rs  row.rs  storage.rs  tests.rs
src/terminal/term/: cell.rs  color.rs  mod.rs  search.rs
src/terminal/tty/: unix.rs
src/terminal/tty/windows/: blocking.rs  (+3 more)
src/vivid/: audio.rs  decoder.rs  mod.rs  scene.rs  transport.rs
tests/ref/clear_underline/: grid.json
tests/ref/csi_rep/: grid.json  vivido.recording
tests/ref/decaln_reset/: grid.json
tests/ref/deccolm_reset/: grid.json  vivido.recording
tests/ref/delete_chars_reset/: grid.json
tests/ref/fish_cc/: vivido.recording
tests/ref/hyperlinks/: grid.json
tests/ref/indexed_256_colors/: vivido.recording
tests/ref/insert_blank_reset/: grid.json  vivido.recording
tests/ref/ll/: grid.json  vivido.recording
tests/ref/origin_goto/: grid.json
tests/ref/region_scroll_down/: vivido.recording
tests/ref/saved_cursor_alt/: grid.json
tests/ref/scroll_up_reset/: vivido.recording
tests/ref/tmux_htop/: grid.json  vivido.recording
tests/ref/vim_24bitcolors_bce/: grid.json  vivido.recording
tests/ref/vim_large_window_scroll/: vivido.recording
tests/ref/vttest_insert/: grid.json  vivido.recording
tests/ref/vttest_origin_mode_1/: grid.json  vivido.recording
tests/ref/vttest_origin_mode_2/: grid.json
tests/ref/vttest_scroll/: grid.json  vivido.recording
tests/ref/vttest_tab_clear_set/: grid.json
tests/ref/wrapline_alt_toggle/: grid.json
tests/ref/zerowidth/: grid.json
tests/ref/zsh_tab_completion/: vivido.recording
vivido/: Cargo.toml  build.rs
vivido/src/: cli.rs  clipboard.rs  event.rs  main.rs  message_bar.rs  panic.rs  window_context.rs
vivido/src/config/: bindings.rs  color.rs  cursor.rs  debug.rs  general.rs  mod.rs  monitor.rs  mouse.rs  scrolling.rs  terminal.rs  ui_config.rs  window.rs
vivido/src/display/: color.rs  content.rs  cursor.rs  damage.rs  hint.rs  media.rs  meter.rs  mod.rs  rects.rs  renderer.rs  text.rs  window.rs
vivido/src/input/: keyboard.rs  mod.rs
vivido/src/polling/: ipc.rs  mod.rs
vivido/src/vivid/: decoder.rs  scene.rs  transport.rs
vivido/windows/: vivido.rc
vivido/windows/wix/: license.rtf
vivido_config/: Cargo.toml
vivido_config/src/: lib.rs
vivido_config_derive/: Cargo.toml
vivido_config_derive/src/: lib.rs
vivido_config_derive/src/config_deserialize/: de_enum.rs
vivido_config_derive/tests/: config.rs
vivido_terminal/: CHANGELOG.md  Cargo.toml
vivido_terminal/src/: event.rs  event_loop.rs  graphics.rs  lib.rs  selection.rs
vivido_terminal/src/grid/: resize.rs
vivido_terminal/src/term/: cell.rs  mod.rs  search.rs
vivido_terminal/src/tty/: mod.rs  unix.rs
vivido_terminal/src/tty/windows/: blocking.rs  conpty.rs
vivido_terminal/tests/: ref.rs
vivido_terminal/tests/ref/alt_reset/: grid.json  vivido.recording
vivido_terminal/tests/ref/clear_underline/: vivido.recording
vivido_terminal/tests/ref/colored_reset/: grid.json
vivido_terminal/tests/ref/colored_underline/: vivido.recording
vivido_terminal/tests/ref/decaln_reset/: vivido.recording
vivido_terminal/tests/ref/delete_chars_reset/: vivido.recording
vivido_terminal/tests/ref/delete_lines/: grid.json  vivido.recording
vivido_terminal/tests/ref/erase_chars_reset/: grid.json  vivido.recording
vivido_terminal/tests/ref/fish_cc/: grid.json
vivido_terminal/tests/ref/grid_reset/: grid.json
vivido_terminal/tests/ref/hyperlinks/: vivido.recording
vivido_terminal/tests/ref/indexed_256_colors/: grid.json
vivido_terminal/tests/ref/issue_855/: grid.json  vivido.recording
vivido_terminal/tests/ref/newline_with_cursor_beyond_scroll_region/: grid.json  vivido.recording
vivido_terminal/tests/ref/origin_goto/: vivido.recording
vivido_terminal/tests/ref/region_scroll_down/: grid.json
vivido_terminal/tests/ref/scroll_in_region_up_preserves_history/: grid.json  vivido.recording
vivido_terminal/tests/ref/scroll_up_reset/: grid.json
vivido_terminal/tests/ref/selective_erasure/: grid.json
vivido_terminal/tests/ref/tab_rendering/: grid.json
vivido_terminal/tests/ref/tmux_git_log/: grid.json  vivido.recording
vivido_terminal/tests/ref/vim_large_window_scroll/: grid.json
vivido_terminal/tests/ref/vim_simple_edit/: grid.json  vivido.recording
vivido_terminal/tests/ref/vttest_cursor_movement_1/: grid.json  vivido.recording
vivido_terminal/tests/ref/vttest_origin_mode_2/: vivido.recording
vivido_terminal/tests/ref/zsh_tab_completion/: grid.json
windows/: LOCAL-TESTING.md  README.md  THIRD-PARTY-NOTICES.header.txt  default-vivido.toml  release.json  vcpkg.json
windows/scripts/: build-installers.ps1  download-prerequisites.ps1  finalize-release.ps1  generate-staging-fragment.ps1  prepare-release.ps1  test-msi.ps1  verify-signatures.ps1
windows/setup-helper/: Cargo.toml
windows/setup-helper/src/: main.rs
windows/wix/: VividoBundle.wixproj  VividoPackage.wixproj  bundle.wxs  license.rtf  vivido.wxs
(+1 files in other folders)
