[package]
name = "vivido"
version = "0.2.0"
authors = ["Wensheng Wang <wenshengwang@gmail.com>"]
license = "Apache-2.0"
description = "A fast cross-platform terminal emulator with protocol-neutral media hooks"
readme = "README.md"
homepage = "https://vivido.dev"
repository = "https://github.com/vivido-dev/vivido"
edition = "2024"
rust-version = "1.88.0"
exclude = ["src/terminal/ref_tests.rs", "tests/ref"]

[lib]
name = "vivido_config_derive"
path = "src/config_derive/lib.rs"
proc-macro = true

[[bin]]
name = "vivido"
path = "src/main.rs"

[[bin]]
name = "vvssh"
path = "src/bin/vvssh.rs"

[dependencies]
ahash = { version = "0.8.6", features = ["no-rng"] }
base64 = "0.22.0"
bitflags = { version = "2.4.1", features = ["serde"] }
bytemuck = { version = "1.24", features = ["derive"] }
clap = { version = "4.2.7", features = ["derive", "env"] }
copypasta = { version = "0.10.1", default-features = false }
getrandom = "0.4"
home = "0.5.5"
image = { version = "0.25", default-features = false, features = [
  "png",
  "jpeg",
] }
libc = "0.2"
log = { version = "0.4", features = ["std", "serde"] }
notify = "8.0.0"
parking_lot = "0.12.0"
parley = "0.11"
polling = "3.11.0"
pollster = "1.0"
proc-macro2 = "1.0.24"
quote = "1.0.7"
regex-automata = "0.4.3"
serde_json = "1"
serde = { version = "1", features = ["derive", "rc"] }
serde_yaml = "0.9.25"
sha2 = "0.11"
signal-hook = { version = "0.4.3", default-features = false }
syn = { version = "3.0", default-features = false, features = [
  "derive",
  "parsing",
  "proc-macro",
  "printing",
] }
tempfile = "3.12.0"
toml = "1.1"
toml_edit = "0.25"
unicode-width = "0.2.0"
unicode-script = "0.5"
vivid_protocol = { version = "1.3", path = "../vivid_protocol" }
vte = { version = "0.15.0", default-features = false, features = [
  "std",
  "ansi",
  "serde",
] }
vello = { version = "0.9.0", default-features = false, features = ["wgpu"] }
winit = { version = "0.30.9", default-features = false, features = [
  "rwh_06",
  "serde",
] }

[build-dependencies]
pkg-config = "0.3"

[dev-dependencies]
clap_complete = "4.2.3"

[target.'cfg(not(windows))'.dependencies]
xdg = "3.0.0"

[target.'cfg(any(target_os = "macos", target_os = "linux", windows))'.dependencies]
cpal = "0.18"
ringbuf = "0.5"

[target.'cfg(unix)'.dependencies]
rustix = { version = "1.0.0", default-features = false, features = ["std"] }
rustix-openpty = "0.2.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.1"
objc2-foundation = { version = "0.3.1", default-features = false, features = [
  "std",
  "NSString",
  "NSLocale",
  "NSUserDefaults",
] }
objc2-app-kit = { version = "0.3.1", default-features = false, features = [
  "std",
  "NSColorSpace",
  "NSResponder",
  "NSView",
  "NSWindow",
] }
wgpu = { version = "29.0.1", default-features = false, features = [
  "metal",
  "std",
  "wgsl",
] }

[target.'cfg(windows)'.dependencies]
dirs = "6.0.0"
miow = "0.6.0"
piper = "0.2.1"
windows-sys = { version = "0.61.2", features = [
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_Threading",
  "Win32_System_Console",
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_LibraryLoader",
  "Win32_System_WindowsProgramming",
] }
wgpu = { version = "29.0.1", default-features = false, features = [
  "dx12",
  "std",
  "wgsl",
] }

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
wgpu = { version = "29.0.1", default-features = false, features = [
  "std",
  "vulkan",
  "wgsl",
] }

[target.'cfg(windows)'.build-dependencies]
embed-resource = "3.0.2"

[features]
default = ["serde", "wayland"]
serde = []
wayland = [
  "copypasta/wayland",
  "winit/wayland",
  "winit/wayland-dlopen",
  "winit/wayland-csd-adwaita",
]
nightly = []

[workspace]
resolver = "2"

[profile.release]
lto = "thin"
debug = 1
incremental = false
