[package]
name = "vivido_config"
version = "0.1.0"
authors = ["Wensheng Wang <wenshengwang@gmail.com>"]
license = "Apache-2.0"
description = "Vivido configuration abstractions"
homepage = "https://vivido.dev"
repository = "https://github.com/wensheng/vivido"
edition.workspace = true
rust-version.workspace = true

[dependencies]
log = { version = "0.4.17", features = ["serde"] }
serde = "1.0.163"
toml.workspace = true

[dev-dependencies]
vivido_config_derive = { version = "0.1.0", path = "../vivido_config_derive" }
serde = { version = "1.0.163", features = ["derive"] }
