[package]
name = "vivido_terminal"
version = "0.1.0"
authors = ["Wensheng Wang <wenshengwang@gmail.com>"]
license = "Apache-2.0"
description = "Library for writing terminal emulators"
readme = "../README.md"
homepage = "https://vivido.dev"
repository = "https://github.com/wensheng/vivido"
edition.workspace = true
rust-version.workspace = true

[features]
default = ["serde"]
serde = ["dep:serde", "bitflags/serde", "vte/serde"]

[dependencies]
base64 = "0.22.0"
bitflags = "2.4.1"
home = "0.5.5"
libc = "0.2"
log = "0.4"
parking_lot = "0.12.0"
polling = "3.8.0"
regex-automata = "0.4.3"
unicode-width = "0.2.0"
vte = { version = "0.15.0", default-features = false, features = [
  "std",
  "ansi",
] }
serde = { version = "1", features = ["derive", "rc"], optional = true }

[target.'cfg(unix)'.dependencies]
rustix-openpty = "0.2.0"
rustix = { version = "1.0.0", default-features = false, features = ["std"] }
signal-hook = "0.4.3"

[target.'cfg(windows)'.dependencies]
piper = "0.2.1"
miow = "0.6.0"
windows-sys = { version = "0.61.2", features = [
  "Win32_System_Console",
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_LibraryLoader",
  "Win32_System_Threading",
  "Win32_System_WindowsProgramming",
] }

[dev-dependencies]
serde_json = "1.0.0"
